--- a/_sources/e_extra/pytorch_image_filtering_ml/Chapter 8 -- Feedforward.ipynb
+++ b/_sources/e_extra/pytorch_image_filtering_ml/Chapter 8 -- Feedforward.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/feedForward.PNG\" width=\"500\">\n",
-    "<center> Figure 8.1"
+    "Figure 8.1"
    ]
   },
   {
