--- a/notebooks/e_extra/pytorch_image_filtering_ml/Chapter 9 -- Back Propagation.ipynb
+++ b/notebooks/e_extra/pytorch_image_filtering_ml/Chapter 9 -- Back Propagation.ipynb
@@ -26,17 +26,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we need to obtain the gradient of the cost function in order to update weights. Let's take the example of the first weight in the input layer in figure 1.13 in chapter 8. We need a longer chain rule to obtain the gradient because we have one more layer:"
+    "So we need to obtain the gradient of the cost function in order to update weights. Let's take the example of the first weight in the input layer in figure 8.1 in chapter 8. We need a longer chain rule to obtain the gradient because we have one more layer:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "    \\frac{\\delta C}{\\delta w^{(1)}_{11}} = \\frac{\\delta C}{\\delta\\hat{y}}\\frac{\\delta\\hat{y}}{\\delta h_2} \\frac{\\delta h_2}{\\delta h_1} \\frac{\\delta h_1}{\\delta w^{(1)}_{11}}\n",
     "    \\label{real chain rule}\n",
-    "\\end{equation}"
+    "$$ (eq9_1)"
    ]
   },
   {
@@ -50,9 +50,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "-\\frac{\\delta C}{w^{(1)}_{11}} = \\frac{1}{m} \\frac{\\delta}{\\delta w^{(1)}_{11}} [\\sum_{i=1}^m [y_i*ln(\\sigma(h_2)]+(1-y_i)*ln(1-\\sigma(h_2))]\n",
-    "\\end{equation}"
+    "$$ (eq9_2)"
    ]
   },
   {
@@ -66,9 +66,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "-\\frac{\\delta C}{w^{(1)}_{11}} = \\frac{\\delta}{\\delta w^{(1)}_{11}} [y*ln(\\sigma(h_2)]+(1-y)*ln(1-\\sigma(h_2))]\n",
-    "\\end{equation}"
+    "$$ (eq9_3)"
    ]
   },
   {
@@ -82,9 +82,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "-\\frac{\\delta C}{w^{(1)}_{11}} = y*\\frac{\\delta}{\\delta w^{(1)}_{11}} ln(\\sigma(h_2)]+ (1-y)*\\frac{\\delta}{\\delta w^{(1)}_{11}}ln(1-\\sigma(h_2))\n",
-    "\\end{equation}\n",
+    "$$ (eq9_4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "where $\\sigma(h_2) = \\hat{y}$."
    ]
   },
@@ -99,9 +106,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "h_2 = \\sigma(h_1)*w^{(2)}_{11} + \\sigma(h_2)*w^{(2)}_{21} + 1*w^{(2)}_{31} \n",
-    "\\end{equation}"
+    "$$ (eq9_5)"
    ]
   },
   {
@@ -115,9 +122,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "h_1 = w^{(1)}_{11}*x_1 + w^{(1)}_{21}*x_2 + w^{(1)}_{31}*x_3 + w^{(1)}_{41}*1\n",
-    "\\end{equation}"
+    "$$ (eq9_6)"
    ]
   },
   {
@@ -131,36 +138,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta \\hat{y}} = \\frac{1-y}{1-\\hat{y}} - \\frac{y}{\\hat{y}}\n",
-    "\\end{equation}"
+    "$$ (eq9_7)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta \\hat{y}}{\\delta h_2} = \\sigma^{'}(h_2)= \\sigma(h_2)[1-\\sigma(h_2)]\n",
-    "\\end{equation}"
+    "$$ (eq9_8)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta h_2}{\\delta h_1} = w^{(2)}_{11}\\sigma^{'}(h_1)\n",
-    "\\end{equation}"
+    "$$ (eq9_9)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta h_1}{\\delta w^{(1)}_{11}} = x_1\n",
-    "\\end{equation}"
+    "$$ (eq9_10)"
    ]
   },
   {
@@ -174,10 +181,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "    -\\frac{\\delta C}{w^{(1)}_{11}} = (\\frac{1-y}{1-\\hat{y}} - \\frac{y}{\\hat{y}})*\\sigma^{'}(h_2)*w^{(2)}_{11}*\\sigma^{'}(h_1)*x_1\n",
     "    \\label{inputToHidden}\n",
-    "\\end{equation}"
+    "$$ (eq9_11)"
    ]
   },
   {
@@ -191,68 +198,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "     \\frac{\\delta C}{\\delta w^{(2)}_{11}} = \\frac{\\delta C}{\\delta\\hat{y}}\\frac{\\delta\\hat{y}}{\\delta h_2} \\frac{\\delta h_2}{\\delta  w^{(2)}_{11}}\n",
-    "\\end{equation}"
+    "$$ (eq9_12)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "     \\frac{\\delta C}{\\delta w^{(2)}_{11}} = (\\frac{1-y}{1-\\hat{y}} - \\frac{y}{\\hat{y}})*\\sigma^{'}(h_2) * \\sigma(h_1)\n",
     "     \\label{hiddenToOutput}\n",
-    "\\end{equation}"
+    "$$ (eq9_13)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We realise that the first two terms are the same in equation \\ref{inputToHidden} and \\ref{hiddenToOutput}, so we define an `Error Term' $\\delta^{n-1}$ for simplicity ($n$ is the number of layers in the network, i.e. $n=3$):"
+    "We realise that the first two terms are the same in equation {eq}`eq9_11` and {eq}`eq9_13`, so we define an `Error Term' $\\delta^{n-1}$ for simplicity ($n$ is the number of layers in the network, i.e. $n=3$):"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "     \\delta^{n-1} = \\frac{\\delta C}{\\delta \\hat{y}}\\frac{\\delta \\hat{y}}{\\delta h_2} =  (\\frac{1-y}{1-\\hat{y}} - \\frac{y}{\\hat{y}})*\\sigma^{'}(h_2)\n",
-    "\\end{equation}"
+    "$$ (eq9_14)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the weight $w_{11}^{(2)}$ from the hidden to output ($2nd$) layer in equation \\ref{hiddenToOutput} can be expressed by the $\\delta^2$ for the $2nd$ layer as "
+    "So the weight $w_{11}^{(2)}$ from the hidden to output ($2nd$) layer in equation {eq}`eq9_13` can be expressed by the $\\delta^2$ for the $2nd$ layer as "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "     \\frac{\\delta C}{\\delta w^{(2)}_{11}} = \\delta^{3-1} *\\sigma(h_1)\n",
-    "\\end{equation}"
+    "$$ (eq9_15)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the weight $w_{11}^{(1)}$ from the input to hidden layer in equation \\ref{inputToHidden} can be written as"
+    "And the weight $w_{11}^{(1)}$ from the input to hidden layer in equation {eq}`eq9_11` can be written as"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "     \\frac{\\delta C}{\\delta w^{(1)}_{11}} = \\delta^{3-1} * w^{(2)}_{11} * \\sigma^{'}(h_1)*x_1\n",
     "     \\label{inputToHidden1}\n",
-    "\\end{equation}"
+    "$$ (eq9_16)"
    ]
   },
   {
@@ -266,9 +273,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "     \\delta^{n-2} = \\delta^{n-1} * w^{(2)}_{11} * \\sigma^{'}(h_1)\n",
-    "\\end{equation}"
+    "$$ (eq9_17)"
    ]
   },
   {
@@ -282,17 +289,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the equation \\ref{inputToHidden1} for weights in the $1st$ layer can be written as"
+    "So the equation {eq}`eq9_16` for weights in the $1st$ layer can be written as"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "     \\frac{\\delta C}{\\delta w^{(1)}_{11}} = \\delta^1 *x_1\n",
     "     \\label{inputToHidden2}\n",
-    "\\end{equation}"
+    "$$ (eq9_18)"
    ]
   },
   {
@@ -313,9 +320,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "w_i^{(2)'} = w_i^{(2)} - \\eta \\nabla C =  w_i^{(2)} - \\eta \\frac{\\delta C}{\\delta w_i} =   w_i^{(2)} - \\eta \\sum_{i=1}^m \\delta^2\\sigma(h_1)\n",
-    "\\end{equation}"
+    "$$ (eq9_19)"
    ]
   },
   {
@@ -336,9 +343,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "w_i^{(1)'} = w_i^{(1)} - \\eta \\nabla C =  w_i^{(1)} - \\eta \\frac{\\delta C}{\\delta w_i} =   w_i^{(1)} - \\eta \\sum_{i=1}^m \\delta^1 x_1\n",
-    "\\end{equation}"
+    "$$ (9_20)"
    ]
   }
  ],
