--- a/notebooks/e_extra/pytorch_image_filtering_ml/Chapter 10 -- General Back Propagation.ipynb
+++ b/notebooks/e_extra/pytorch_image_filtering_ml/Chapter 10 -- General Back Propagation.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/singleNeuronStructure3.PNG\" width=\"800\">\n",
-    "<center>Figure 1.14: The3blue1brown does a pretty good animation already:\n",
+    "Figure 10.1: The3blue1brown does a pretty good animation already:\n",
     "    https://www.youtube.com/watch?v=tIeHLnjs5U8"
    ]
   },
@@ -28,10 +28,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "a^{(N)} = \\boldsymbol{y} = \\sigma(w^{(N)}*a^{(N-1)})\n",
-    "\\end{equation}\n",
-    "where $N=3$ in this example of figure 1.14."
+    "$$ (eq10_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "where $N=3$ in this example of figure 10.1."
    ]
   },
   {
@@ -45,9 +52,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "a^{(3)} = \\boldsymbol{y} = \\sigma(w^{(3)}*a^{(2)})\n",
-    "\\end{equation}\n",
+    "$$ (eq10_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "where $a^{(2)} = \\sigma(h_2)$, and it determines the cost function (simplified to $C=(\\boldsymbol{y}-y)^2$). If the actual output $\\boldsymbol{y}$ from the network is close to the desired output $y$, then the cost will be low, while if it's far away, the cost will be high."
    ]
   },
@@ -62,9 +76,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "h^{(N)} = w^{(N)}*a^{(N-1)}\n",
-    "\\end{equation}"
+    "$$ (eq10_3)"
    ]
   },
   {
@@ -85,9 +99,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta w_1} \\approx \\frac{\\Delta C}{\\Delta w_1}\n",
-    "\\end{equation}"
+    "$$ (eq10_4)"
    ]
   },
   {
@@ -101,9 +115,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\Delta a_1 \\approx \\frac{\\delta \\sigma(h_1)}{\\delta w_1} * \\Delta w_1 =\\frac{\\delta \\sigma(h_1)}{\\delta h_1}*\\frac{\\delta h_1}{\\delta w_1}*\\Delta w_1 =   \\sigma^{'}(h_1)*x*\\Delta w_1 \n",
-    "\\end{equation}"
+    "$$ (eq10_5)"
    ]
   },
   {
@@ -117,9 +131,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\Delta h_2 \\approx \\frac{\\delta h_2}{\\delta a_1} * \\Delta a_1 = w_2*\\Delta a_1\n",
-    "\\end{equation}"
+    "$$ (eq10_6)"
    ]
   },
   {
@@ -133,9 +147,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\Delta h_2 \\approx w_2* \\sigma^{'}(h_1)*x*\\Delta w_1 \n",
-    "\\end{equation}"
+    "$$ (eq10_7)"
    ]
   },
   {
@@ -149,9 +163,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\Delta a_2 = \\Delta \\sigma(h_2) \\approx \\frac{\\delta a_2}{h_2} * \\Delta h_2 =  \\sigma^{'}(h_2) * \\Delta h_2 =\\sigma^{'}(h_2) * w_2* \\sigma^{'}(h_1)*\\Delta w_1 \n",
-    "\\end{equation}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "which will cause a change in $h_3$."
    ]
   },
@@ -159,9 +180,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\Delta h_3 \\approx \\frac{\\delta h_3}{\\delta a_2} * \\Delta a_2 = w_3 * \\Delta a_2 = w_3 * \\sigma^{'}(h_2) * w_2* \\sigma^{'}(h_1)*x*\\Delta w_1\n",
-    "\\end{equation}"
+    "$$ (eq10_8)"
    ]
   },
   {
@@ -175,9 +196,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\Delta \\boldsymbol{y} = \\Delta \\sigma(h_3) \\approx \\frac{\\delta y}{h_3} * \\Delta h_3 =\\sigma^{'}(h_3) * \\Delta h_3 = \\sigma^{'}(h_3) * w_3 * \\sigma^{'}(h_2) * w_2* \\sigma^{'}(h_1)*x*\\Delta w_1\n",
-    "\\end{equation}"
+    "$$ (eq10_9)"
    ]
   },
   {
@@ -191,27 +212,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\Delta C \\approx \\frac{\\delta C}{\\delta \\boldsymbol{y}} * \\Delta \\boldsymbol{y} = \\frac{\\delta C}{\\delta \\boldsymbol{y}}*\\sigma^{'}(h_3) * w_3 * \\sigma^{'}(h_2) * w_2* \\sigma^{'}(h_1)*x*\\Delta w_1\n",
     "\\label{deltaC}\n",
-    "\\end{equation}"
+    "$$ (eq10_10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can keep going in this fashion, tracking the way changes propagate through the rest of the network, in theory to the $n^{th}$ layer. After dividing $\\Delta w_1$ at the both sides in equation \\ref{deltaC}, the resulting gradient for the $w_1$ in this four layers network should be:"
+    "We can keep going in this fashion, tracking the way changes propagate through the rest of the network, in theory to the $n^{th}$ layer. After dividing $\\Delta w_1$ at the both sides in equation {eq}`eq10_10`, the resulting gradient for the $w_1$ in this four layers network should be:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta w_1} =  x*\\sigma^{'}(h_1)*w_2*\\sigma^{'}(h_2)*w_3*\\sigma^{'}(h_3)*\\frac{\\delta C}{\\delta \\boldsymbol{y}}\n",
     "\\label{dCdw1}\n",
-    "\\end{equation}"
+    "$$ (eq10_11)"
    ]
   },
   {
@@ -225,16 +246,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta w_1} = \\frac{\\delta h_1}{\\delta w_1}*\\frac{\\delta a^{(1)}}{\\delta h_1}*\\frac{\\delta h_2}{\\delta a^{(1)}}*\\frac{\\delta a^{(2)}}{\\delta h_2}*\\frac{\\delta h_3}{\\delta a^{(2)}}*\\frac{\\delta a^{(3)}}{\\delta h_3}*\\frac{\\delta C}{\\delta a^{(3)}}\n",
-    "\\end{equation}"
+    "$$ (eq10_12)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We should be reaffirming our idea of defining the `Error Term' (by figure 1.15) for the efficiency of our code."
+    "We should be reaffirming our idea of defining the `Error Term' (by figure 10.2) for the efficiency of our code."
    ]
   },
   {
@@ -242,7 +263,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/singleNeuronStructure4.PNG\" width=\"800\">\n",
-    "<center> Figure 1.15"
+    "Figure 10.2"
    ]
   },
   {
@@ -256,9 +277,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta h_3}{\\delta a^{(2)}}*\\frac{\\delta a^{(3)}}{\\delta h_3}*\\frac{\\delta C}{\\delta a^{(3)}}\n",
-    "\\end{equation}"
+    "$$ (eq10_13)"
    ]
   },
   {
@@ -287,7 +308,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/multipleNeuronStructure1.PNG\" width=\"800\">\n",
-    "<center> Figure 1.16"
+    "Figure 10.3"
    ]
   },
   {
@@ -301,9 +322,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta h_1^{(3)}} = \\delta^{(3)}_1\n",
-    "\\end{equation}"
+    "$$ (eq10_14)"
    ]
   },
   {
@@ -317,9 +338,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta h_2^{(3)}} = \\delta^{(3)}_2\n",
-    "\\end{equation}"
+    "$$ (eq10_15)"
    ]
   },
   {
@@ -333,9 +354,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta h_j^{(N)}} = \\delta^{(N)}_j = \\frac{\\delta C}{\\delta a^{(N)}_j} \\frac{a^{(N)}_j}{\\delta h_j^{(N)}} = \\frac{\\delta C}{\\delta a^{(N)}_j} \\sigma^{'}(h_j^{(N)})\n",
-    "\\end{equation}"
+    "$$ (eq10_16)"
    ]
   },
   {
@@ -349,26 +370,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\delta^{(N)} = \\frac{\\delta C}{\\delta a^{(N)}}\\odot \\sigma^{'}(h^{(N)})\n",
-    "\\end{equation}"
+    "$$ (eq10_17)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, the change in the $h_j^{(N-1)}$ in the $N-1$ layer will change $a^{(N-1)}_j$ and then results in a change in $a^{(N)}_j$, which will cause the change in the cost $C$. In specific (red neuron in figure 1.16), we have "
+    "Then, the change in the $h_j^{(N-1)}$ in the $N-1$ layer will change $a^{(N-1)}_j$ and then results in a change in $a^{(N)}_j$, which will cause the change in the cost $C$. In specific (red neuron in figure 10.3), we have "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta h_j^{(N-1)}} = \\frac{\\delta C}{\\delta h_2^{(2)}} = \\frac{\\delta C}{\\delta a^{(3)}_1} * \\frac{\\delta a^{(3)}_1}{\\delta h_1^{(3)}} * \\frac{\\delta h_1^{(3)}}{\\delta a^{(2)}_2}*\\frac{\\delta a^{(2)}_2}{\\delta h_2^{(2)}} +  \\frac{\\delta C}{\\delta a^{(3)}_2} * \\frac{\\delta a^{(3)}_2}{\\delta h_2^{(3)}} * \\frac{\\delta h_2^{(3)}}{\\delta a^{(2)}_2}*\\frac{\\delta a^{(2)}_2}{\\delta h_2^{(2)}} \n",
     "\\label{dCdh22}\n",
-    "\\end{equation}"
+    "$$ (eq10_18)"
    ]
   },
   {
@@ -382,10 +403,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta h_1^{(2)}} = \\frac{\\delta C}{\\delta a^{(3)}_1} * \\frac{\\delta a^{(3)}_1}{\\delta h_1^{(3)}} * \\frac{\\delta h_1^{(3)}}{\\delta a^{(2)}_1}*\\frac{\\delta a^{(2)}_1}{\\delta h_1^{(2)}} +  \\frac{\\delta C}{\\delta a^{(3)}_2} * \\frac{\\delta a^{(3)}_2}{\\delta h_2^{(3)}} * \\frac{\\delta h_2^{(3)}}{\\delta a^{(2)}_1}*\\frac{\\delta a^{(2)}_1}{\\delta h_1^{(2)}} \n",
     "\\label{dCdh12}\n",
-    "\\end{equation}"
+    "$$ (eq10_19)"
    ]
   },
   {
@@ -399,10 +420,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta h_3^{(2)}} = \\frac{\\delta C}{\\delta a^{(3)}_1} * \\frac{\\delta a^{(3)}_1}{\\delta h_1^{(3)}} * \\frac{\\delta h_1^{(3)}}{\\delta a^{(2)}_3}*\\frac{\\delta a^{(2)}_3}{\\delta h_3^{(2)}} +  \\frac{\\delta C}{\\delta a^{(3)}_2} * \\frac{\\delta a^{(3)}_2}{\\delta h_2^{(3)}} * \\frac{\\delta h_2^{(3)}}{\\delta a^{(2)}_3}*\\frac{\\delta a^{(2)}_3}{\\delta h_3^{(2)}} \n",
     "\\label{dCdh32}\n",
-    "\\end{equation}"
+    "$$ (eq10_20)"
    ]
   },
   {
@@ -410,28 +431,28 @@
    "metadata": {},
    "source": [
     "<img src=\"images/ErrorTermN_1.PNG\" width=\"800\">\n",
-    "<center> Figure 1.17"
+    "<center> Figure 10.4"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can define such gradient in equations \\ref{dCdh22}, \\ref{dCdh12} and \\ref{dCdh32} by $\\delta^{(N-1)}$ in a vector form with $\\delta^{(N)}$ (shown in figure 1.17)"
+    "Now, we can define such gradient in equations {eq}`eq10_18`, {eq}`eq10_19` and {eq}`eq10_20` by $\\delta^{(N-1)}$ in a vector form with $\\delta^{(N)}$ (shown in figure 10.4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\begin{bmatrix} \\delta_1^{(2)}\\\\\\delta_2^{(2)}\\\\\\delta_3^{(2)}\\end{bmatrix}\n",
     "= \\begin{bmatrix} w^{(3)}_{11} & w^{(3)}_{21} \\\\w^{(3)}_{12} & w^{(3)}_{23} \\\\w^{(3)}_{13} & w^{(3)}_{23} \\end{bmatrix}\n",
     "\\cdot \n",
     "\\begin{bmatrix} \\delta_1^{(3)}\\\\\\delta_2^{(3)}\\end{bmatrix}\n",
     "\\odot\n",
     "\\begin{bmatrix} \\sigma^{'}(h_1^{(2)})\\\\\\sigma^{'}(h_2^{(2)})\\\\\\sigma^{'}(h_3^{(2)})\\end{bmatrix}\n",
-    "\\end{equation}"
+    "$$ (eq10_21)"
    ]
   },
   {
@@ -445,10 +466,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\delta^{(N-1)} = w^{(N)} \\cdot \\delta^{(N)} \\odot \\sigma^{'}_{h^{N-1}}\n",
     "\\label{ErrorTermN_1_general}\n",
-    "\\end{equation}\n",
+    "$$ (eq10_22)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "where $\\odot$ is the handamard or elementwise product."
    ]
   },
@@ -464,7 +492,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/multipleNeuronStructure2.PNG\" width=\"800\">\n",
-    "<center> Figure 1.18"
+    "Figure 10.5"
    ]
   },
   {
@@ -478,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\begin{bmatrix} \\delta_1^{(1)}\\\\\\delta_2^{(1)}\\end{bmatrix}\n",
     "= \\begin{bmatrix} w^{(2)}_{11} & w^{(2)}_{21} & w^{(2)}_{31} \\\\w^{(2)}_{12} & w^{(2)}_{22} & w^{(2)}_{32} \\end{bmatrix}\n",
     "\\cdot \n",
@@ -486,14 +514,14 @@
     "\\odot\n",
     "\\begin{bmatrix} \\sigma^{'}(h_1^{(1)})\\\\\\sigma^{'}(h_2^{(1)})\\end{bmatrix}\n",
     "\\label{dCdh_1}\n",
-    "\\end{equation}"
+    "$$ (eq10_23)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we have obtained the change of $C$ with respect to $h_i$ in the first layer. Now let us remember the actual goal here is to investigate how the change in weights caused the change in the cost. That's right, it is the change of weights $w$ that changes the $h_i$. This connects with the expression in equation \\ref{dCdh_1}: $\\frac{\\delta C}{\\delta h_i^{1}}$, which leads to the change of $C$."
+    "So we have obtained the change of $C$ with respect to $h_i$ in the first layer. Now let us remember the actual goal here is to investigate how the change in weights caused the change in the cost. That's right, it is the change of weights $w$ that changes the $h_i$. This connects with the expression in equation {eq}`eq10_23`: $\\frac{\\delta C}{\\delta h_i^{1}}$, which leads to the change of $C$."
    ]
   },
   {
@@ -501,7 +529,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/multipleNeuronStructure4.PNG\" width=\"800\">\n",
-    "<center> Figure 1.19"
+    "Figure 10.6"
    ]
   },
   {
@@ -515,9 +543,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "h^{(1)}_1=w_{11}*x_1 + w_{12}*x_2 + w_{13}*x_3\n",
-    "\\end{equation}"
+    "$$ (eq10_24)"
    ]
   },
   {
@@ -538,16 +566,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta w_{11}}=\\frac{\\delta C}{\\delta h_{1}^{(1)}}\\frac{\\delta h_{1}^{(1)}}{\\delta w_{11}}=\\delta_1^{(1)}*x_1\n",
-    "\\end{equation}"
+    "$$ (eq10_25)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can update the weight by using the equation 20 in chapter 9."
+    "Finally, we can update the weight by using the equation {eq}`eq9_20` in chapter 9."
    ]
   },
   {
