deploy: e15f21aa1723beac08bc43285f186b48439bca7b

--- a/_sources/e_extra/pytorch_image_filtering_ml/Chapter 13 -- Vanishing Gradient 1.ipynb
+++ b/_sources/e_extra/pytorch_image_filtering_ml/Chapter 13 -- Vanishing Gradient 1.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/twoSeparators.PNG\" width=\"600\">\n",
-    "<center> Figure 1.24"
+    "Figure 13.1"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This in turn will make the gradients of the cost function in all directions to be close to zero. Remember that in order to update the weight, we need to compute the gradient of the cost function with respect to that weight (equation 1 in chapter Backpropagation). This equation involves the term of $\\frac{\\delta \\hat{y}}{\\delta h_2}$, which is the gradient of the activation function (i.e. sigma function). If this term is close to zero, then the whole cost function, as a result, will be close to zero. This implies that we are updating the weight with $\\Delta w$ which is close to zero. We are going nowhere."
+    "This in turn will make the gradients of the cost function in all directions to be close to zero. Remember that in order to update the weight, we need to compute the gradient of the cost function with respect to that weight (equation {eq}`eq9_1` in chapter Backpropagation). This equation involves the term of $\\frac{\\delta \\hat{y}}{\\delta h_2}$, which is the gradient of the activation function (i.e. sigma function). If this term is close to zero, then the whole cost function, as a result, will be close to zero. This implies that we are updating the weight with $\\Delta w$ which is close to zero. We are going nowhere."
    ]
   }
  ],
