deploy: d49033ea21debf0aafbf03844355bbf1d8c499fc

--- a/_sources/e_extra/pytorch_image_filtering_ml/Chapter 15 -- Regularisation.ipynb
+++ b/_sources/e_extra/pytorch_image_filtering_ml/Chapter 15 -- Regularisation.ipynb
@@ -19,18 +19,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "L1 \\; Regularisation = - \\frac{1}{m} \\sum^{m}_{i=1}[y_i*ln(\\hat{y}_i) + (1-y_i)*ln(1-\\hat{y}_i)] + \\lambda(|w_1|+...+|w_n|)\n",
-    "\\end{equation}"
+    "$$ (eq15_1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "L2 \\; Regularisation = - \\frac{1}{m} \\sum^{m}_{i=1}[y_i*ln(\\hat{y}_i) + (1-y_i)*ln(1-\\hat{y}_i)] + \\lambda(w_1^2+...+w_n^2)\n",
-    "\\end{equation}"
+    "$$ (eq15_2)"
    ]
   },
   {
@@ -80,14 +80,14 @@
    "metadata": {},
    "source": [
     "<img src=\"images/regularisation.PNG\" width=\"600\">\n",
-    "<center> Figure 1.26"
+    "Figure 15.1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implicitly, we're studying some real-world phenomenon here, with x and y representing real-world data. Our goal is to build a model which lets us predict y as a function of x. We could try using neural networks to build such a model, but I'm going to do something even simpler: I'll try to model y as a polynomial in x. I'm doing this instead of using neural nets because using polynomials will make things particularly transparent. Once we've understood the polynomial case, we'll translate to neural networks. Now, there are ten points in the graph above, which means we can find a unique 9th-order polynomial $y=a_0x_9+a_1x_8+...+a_9$ which fits the data exactly. Here's the graph of that polynomial (figure 1.27)."
+    "Implicitly, we're studying some real-world phenomenon here, with x and y representing real-world data. Our goal is to build a model which lets us predict y as a function of x. We could try using neural networks to build such a model, but I'm going to do something even simpler: I'll try to model y as a polynomial in x. I'm doing this instead of using neural nets because using polynomials will make things particularly transparent. Once we've understood the polynomial case, we'll translate to neural networks. Now, there are ten points in the graph above, which means we can find a unique 9th-order polynomial $y=a_0x_9+a_1x_8+...+a_9$ which fits the data exactly. Here's the graph of that polynomial (figure 15.2)."
    ]
   },
   {
@@ -95,14 +95,14 @@
    "metadata": {},
    "source": [
     "<img src=\"images/regularisation1.PNG\" width=\"600\">\n",
-    "<center> Figure 1.27"
+    "Figure 15.2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That provides an exact fit. But we can also get a good fit using the linear model $y=2x$ (figure 1.28):"
+    "That provides an exact fit. But we can also get a good fit using the linear model $y=2x$ (figure 15.3):"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/regularisation2.PNG\" width=\"600\">\n",
-    "<center> Figure 1.28"
+    "Figure 15.3"
    ]
   },
   {
