Fractional Knapsack example Greedy

--- a/notebooks/b_coding/Fundamentals of Computer Science/5_Greedy_Algorithms.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/5_Greedy_Algorithms.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "1) **Optimal substructure**: the problem should be expressed in terms of independent subproblems, just like in [Dynamic Programming]!(https://primer-computational-mathematics.github.io/book/b_coding/Fundamentals%20of%20Computer%20Science/4_Dynamic_Programming.html#dynamic-programming).\n",
     "\n",
-    "2) **Greedy choice leads to optimal solution**: This is usually done by the *copy and paste* argument that shows that there exists an optimal solution that involves the proposed Greedy hypothesis. It has a inductive flavour, which means that the Greedy choice leave us with the same *smaller* problem. You can assume that the input is sorted somehow, it might be very helpful!"
+    "2) **Greedy choices lead to optimal solution**: This is usually done by the *copy and paste* argument that shows that there exists an optimal solution that involves the proposed Greedy hypothesis. It has a inductive flavour, which means that the Greedy choice leave us with the same *smaller* problem. You can assume that the input is sorted somehow, it might be very helpful!"
    ]
   },
   {
@@ -149,7 +149,69 @@
    "metadata": {},
    "source": [
     "## Advanced Examples\n",
-    "\n"
+    "\n",
+    "Here are several examples which might be a little more involving:\n",
+    "\n",
+    "------------------------\n",
+    "\n",
+    "* **Fractional Knapsack** You are two lists `vals` and `weights` as well as an integer `W` - the total weight of a backpack. You are allowed to take any fraction of any item in the list so that the sum of their weights is no bigger than `W`. All numbers in the input are positive. Return the maximum possible value:\n",
+    "\n",
+    "**Optimal substructure** Let \\\\(val(i, w_j,w)\\\\) denote the *maixmum* value we can get by taking \\\\(w_j \\leq w_i \\\\) of item  \\\\(i\\\\) (\\\\(w_i\\\\) is the weight of the object), considering the object up to the \\\\(i\\\\)th. \\\\(w\\\\) is the weight left in the Knapsack. The solution uses the following recursion:\n",
+    "\n",
+    "\\\\[val(i, w_j,W) = max(val(i+1, w_j,w - w_j) + w_j \\times \\frac{v_i}{w_i}, val(i+1, w_j,w))\\\\]\n",
+    "\n",
+    "**Greedy choices lead to optimal solution** We will be taking the aveliable items of the greatest *density* \\\\(\\frac{v_i}{w_i}\\\\).\n",
+    "\n",
+    "Imagine a sequence of the optimal \\\\(w_j\\\\)s. Let us take such item \\\\(k\\\\) that \\\\(\\frac{v_k}{w_k}\\\\) is no smaller than any such ratio in the sequence. If the such item is already in the sequence, we check if the weight taken is maximum possible, if not we can improve or keep the result equal. Since the solution is optimal we cannot improve. If the item is not, we can replace with other items and improve or stay the same, again solution is optimal so the result can only stay the same. Therefore such replacement will result in a optimal solution:\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vals and weights have positive values only \n",
+    "# W is positive as well\n",
+    "def fractionalKnapsack(vals,weights, W):\n",
+    "    assert len(vals) and len(weights) and W and len(vals) == len(weights)\n",
+    "    wDensity = list(zip(weights,vals))\n",
+    "    # sort according to density\n",
+    "    wDensity.sort(key =  lambda x: x[1] / x[0])\n",
+    "    \n",
+    "    #set up the inital values\n",
+    "    i = 0\n",
+    "    res = 0\n",
+    "    while W > 0 and i < len(wDensity):\n",
+    "        if W >= wDensity[i][0]:\n",
+    "            res += wDensity[i][1]\n",
+    "            W -= wDensity[i][0]\n",
+    "        else:\n",
+    "            res += W * wDensity[i][1]/wDensity[i][0]\n",
+    "            W = 0\n",
+    "        i+=1  \n",
+    "    return res\n",
+    "    \n",
+    "    \n",
+    "print(fractionalKnapsack([1,2,3],[4,5,6],12))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------------\n",
+    "* **Coin Changing**: "
    ]
   }
  ],
