--- a/notebooks/b_coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
+++ b/notebooks/b_coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
@@ -22,19 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world!\n"
+      "Hello World!\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello world!\")"
+    "print(\"Hello World!\")"
    ]
   },
   {
@@ -518,7 +518,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -534,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
